[metadata]
name = salamanca
author = salamanca authors
author_email = matthew.gidden@gmail.com
license = Apache 2.0
description = Provides access to and operations on commonly used socio-economic indicators
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/gidden/salamanca
version = attr: salamanca.__version__

[options]
packages = salamanca
include_package_data = True
install_requires =
    pandas
    pyomo
    numpy
    scipy
    requests

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    cloud_sptheme
    nbsphinx
    numpydoc
    sphinxcontrib-bibtex<2.0
    sphinxcontrib-programoutput

[options.entry_points]
console_scripts =
    sal = salamanca.cli:main